# iridi-wiki-parser

./: .gitignore  README.md  html_table_parse.py  parser.py  parserv2.py  pyproject.toml  requirements.txt  test_parse_code.py  to_parse.txt
helpers/: CONSTANTS.py  __init__.py  download_img.py  strs.py
my-website/: .gitignore
my-website/docs/Blur_effect/: index.md
my-website/docs/IRidium_studio_2019_Animation/: index.md
my-website/docs/IRidium_studio_2019_Command_Sending/: index.md
my-website/docs/IRidium_studio_2019_Import_Data/: index.md
my-website/docs/IRidium_studio_2019_Item_States/: index.md
my-website/docs/IRidium_studio_2019_Lists/: index.md
my-website/docs/IRidium_studio_2019_Native_Drivers/: index.md
my-website/docs/IRidium_studio_2019_Navigation/: index.md
my-website/docs/IRidium_studio_2019_Programming/: index.md
my-website/docs/IRidium_studio_2019_Sounds/: index.md
my-website/docs/IRidium_studio_2019_Trends/: index.md
my-website/docs/IRidium_studio_2019_UI_Relations/: index.md
my-website/docs/JavaScript_iRidium_script/: index.md
my-website/docs/Text_transform/: index.md
my-website/docs/Графики_и_диаграммы/: index.md
my-website/docs/Добавить_драйвер/: index.md
my-website/docs/Импорт_данных_в_iRidium_studio/: index.md
my-website/docs/Инструменты_для_создания_собственных_драйверов/: index.md
my-website/docs/Способы_отладки/: index.md
my-website/docs/Справочник_JavaScript_API/: index.md
